últimos cambios en index.html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <h2>Por favor inicialice POSTMAN y realice las peticiones utilizando la siguiente dirección: http://localhost:3000/tareas/</h2>
     <br>
     <h2>Para realizar consultas utilice los siguientes comandos:</h2>
-    <h3>GET:Consultar</h3>
-    <h3>POST:Crear</h3>
-    <h3>PUT:Actualizar</h3>
-    <h3>DELETE:Eliminar</h3>
+    <h3>GET: Consultar lista de tareas</h3>
+    <h3>POST: Crear una tarea nueva</h3>
+    <h3>PUT: Actualizar una tarea existente</h3>
+    <h3>DELETE: Eliminar una tarea existente</h3>
     <br>
-    <h2>Para CREAR O ACTUALIZAR, utilice el siguiente cuerpo Json como ejemplo:</h2>
+    <h2>Para CREAR O ACTUALIZAR una tarea, utilice el siguiente cuerpo Json como ejemplo:</h2>
     <h3>{ <br>
         "id": "5",<br>
         "descripcion": "realizar visitas",<br>
